# sentinel-ml

./: GETTING Started.md  LICENSE  README.md  index.html  pyproject.toml  styles.css
backend/sentinel_ml/: main.py  validator.py
frontend/: index.html
src/sentinel_ml/: test.py
