[project]
name = "sentinel-ml"
version = "0.1.0"
description = "A microservice that monitors deployed ML models for data drift, input anomalies, and performance drops."
license = { text = "MIT" }
requires-python = ">=3.13"

[[project.authors]]
name = "Chinmay Shet"
email = "chishxd@gmail.com"

[[project.authors]]
name = "Vedant Patil"
email = "vedant@example.com"

[tool.poetry]
packages = [
  { include = "sentinel_ml", from = "src" }
]

[tool.poetry.dependencies]
pandas = "^2.3.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.0"
fastapi = {extras = ["standard"], version = "^0.116.0"}
[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["E", "F", "W"] # Basic pycodestyle + pyflakes + warnings

# Example: ignore specific rules if needed
# ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# If you want Ruff to fix on save, or do aggressive checks, you can tune here.
